--- a/src/main/resources/templates/product/view.html
+++ b/src/main/resources/templates/product/view.html
@@ -74,6 +74,7 @@
                         <input type="text" id="prodNo" th:value="${product.prodNo}">
                         <input type="text" id="dis_price" th:value="${product.discountingPrice}">
                         <input type="text" id="discount" th:value="${product.discount}">
+                        <input type="text" id="input" value=1>
                     </div>
                 </div>
             </article>
