--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,8 +64,7 @@
         <a href="#"><img th:src="@{/images/topBanner1.png}"/></a>
         <button class="btnClose">close</button>
       </article>
-    </div>
-    <div id="wrapper">      
+    </div>    <div id="wrapper">
       <header>
         <div class="top">
           <div>
