--- a/src/main/resources/templates/admin/cs/list.html
+++ b/src/main/resources/templates/admin/cs/list.html
@@ -2,53 +2,72 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/admin/admin_layout :: content}">
-  <article layout:fragment="content">
+  <section layout:fragment="content">
+
     <nav th:replace="~{/fragments/admin/admin_nav :: nav}">
       <!-- nav 들어올 영역 -->
     </nav>
-    <table>
-      <tr th:each="board:${boardList}">
-        <td>
-          <a th:href="@{/cs/qna/view(cate1=${board.cate1.cate1}, no=${board.no})}">
-            제목입니다.
-          </a>
-        </td>
-        <td>
-          답변완료
-        </td>
-        <td>a12345</td>
-        <td>23.10.19</td>
-      </tr>
+    <section>
+      <table>
 
-      <!-- data가 없을 경우 출력 -->
-      <tr th:if="${pageResponseDTO.total < 1}">
-        <td style="text-align: center; font-size: 14px; padding: 50px 0;">
-          <i class="fa-regular fa-face-sad-tear" style="color: grey; font-size: 100px;"></i><br><br>
-          등록된 문의 내용이 없습니다.
-        </td>
-      </tr>
+        <tr>
+          <th>답변완료</th>
+          <th>답변완료</th>
+          <th>답변완료</th>
+          <th><a>제목입니다.</a></th>
+          <th>답변완료</th>
+          <th>a12345</th>
+          <th>23.10.19</th>
+          <th>23.10.19</th>
+        </tr>
 
-    </table>
+        <tr>
+          <td>답변완료</td>
+          <td>답변완료</td>
+          <td>답변완료</td>
+          <td><a>제목입니다.</a></td>
+          <td>답변완료</td>
+          <td>a12345</td>
+          <td>23.10.19</td>
+          <td>23.10.19</td>
+        </tr>
 
-    <div class="page" th:if="${pageResponseDTO.total > 0}">
-      <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.start-1})}"
-         class="prev" th:if="${pageResponseDTO.prev}">
-        이전
-      </a>
+        <!-- data가 없을 경우 출력
+        <tr th:if="${pageResponseDTO.total < 1}">
+          <td style="text-align: center; font-size: 14px; padding: 50px 0;">
+            <i class="fa-regular fa-face-sad-tear" style="color: grey; font-size: 100px;"></i><br><br>
+            등록된 문의 내용이 없습니다.
+          </td>
+        </tr>-->
 
-      <th:block th:each="num:${#numbers.sequence(pageResponseDTO.start, pageResponseDTO.end)}">
-        <a th:href="@{/cs/qna/list(cate=free, pg=${num})}" th:classappend="${pageResponseDTO.pg eq num ? 'num on' : 'num'}">[[${num}]]</a>
-      </th:block>
+      </table>
 
-      <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.end+1})}"
-         class="next" th:if="${pageResponseDTO.next}">
-        다음
-      </a>
-    </div>
+      <!--<div class="page" th:if="${pageResponseDTO.total > 0}">
+        <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.start-1})}"
+           class="prev" th:if="${pageResponseDTO.prev}">
+          이전
+        </a>
 
-    <th:block  sec:authorize="isAuthenticated()">
-      <a th:href="@{/cs/qna/write(cate1=${cate1Info.cate1})}" class="btnWrite">문의하기</a>
-    </th:block>
+        <th:block th:each="num:${#numbers.sequence(pageResponseDTO.start, pageResponseDTO.end)}">
+          <a th:href="@{/cs/qna/list(cate=free, pg=${num})}" th:classappend="${pageResponseDTO.pg eq num ? 'num on' : 'num'}">[[${num}]]</a>
+        </th:block>
 
-  </article>
+        <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.end+1})}"
+           class="next" th:if="${pageResponseDTO.next}">
+          다음
+        </a>
+      </div>-->
+      <div class="page">
+        <a class="prev">이전</a>
+        <a class="num on">1</a>
+        <a class="num">2</a>
+        <a class="num">3</a>
+        <a class="next">다음</a>
+
+      </div>
+
+
+      <a href="#" class="btnWrite">문의하기</a>
+    </section>
+  </section>
 </html>
