--- a/src/main/resources/templates/admin/cs/list.html
+++ b/src/main/resources/templates/admin/cs/list.html
@@ -2,72 +2,107 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/admin/admin_layout :: content}">
-  <section layout:fragment="content">
+  <section layout:fragment="content" id="notice">
+
+    <head>
+      <link><link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
+    </head>
 
     <nav th:replace="~{/fragments/admin/admin_nav :: nav}">
       <!-- nav 들어올 영역 -->
     </nav>
-    <section>
-      <table>
+    <section id="list">
+      <!--공지사항만-->
+      <select>
+        <option>유형선택</option>
+      </select>
 
-        <tr>
-          <th>답변완료</th>
-          <th>답변완료</th>
-          <th>답변완료</th>
-          <th><a>제목입니다.</a></th>
-          <th>답변완료</th>
-          <th>a12345</th>
-          <th>23.10.19</th>
-          <th>23.10.19</th>
-        </tr>
+      <!--자묻질, 문사만-->
+      <select>
+        <option>1차 선택</option>
+      </select>
+      <select>
+        <option>2차 선택</option>
+      </select>
 
-        <tr>
-          <td>답변완료</td>
-          <td>답변완료</td>
-          <td>답변완료</td>
-          <td><a>제목입니다.</a></td>
-          <td>답변완료</td>
-          <td>a12345</td>
-          <td>23.10.19</td>
-          <td>23.10.19</td>
-        </tr>
+      <article>
+        <table id="faq">
+          <tr>
+            <th><input type="checkbox" class="allChk"/></th>  <!--notice faq qna-->
+            <th>번호</th>  <!--notice faq qna-->
+            <th>유형</th>  <!--notice-->
+            <th>1차유형</th>  <!--faq qna-->
+            <th>2차유형</th>  <!--faq qna-->
+            <th><a href="#">제목</a></th>  <!--notice faq qna-->
+            <th>작성자</th>  <!--qna-->
+            <th>조회</th>  <!--notice faq-->
+            <th>날짜</th>  <!--notice faq qna-->
+            <th>관리</th>  <!--notice faq-->
+            <th>상태</th>  <!--qna-->
+          </tr>
 
-        <!-- data가 없을 경우 출력
-        <tr th:if="${pageResponseDTO.total < 1}">
-          <td style="text-align: center; font-size: 14px; padding: 50px 0;">
-            <i class="fa-regular fa-face-sad-tear" style="color: grey; font-size: 100px;"></i><br><br>
-            등록된 문의 내용이 없습니다.
-          </td>
-        </tr>-->
+          <tr>
+            <td><input type="checkbox"></td>
+            <td>12</td>
+            <td>회원</td>
+            <td>쿠폰/혜택</td>
+            <td>쿠폰/이벤트</td>
+            <td class="tit"><a>상품 구입관련 문의드립니다.</a></td>
+            <td>김덕배</td>
+            <td>120</td>
+            <td>23.10.20</td>
+            <td>
+              <a href="#">[삭제]</a><br>
+              <a href="#">[수정]</a>
+            </td>
+            <td>답변완료</td>
+          </tr>
 
-      </table>
+          <!-- data가 없을 경우 출력
+          <tr th:if="${pageResponseDTO.total < 1}">
+            <td style="text-align: center; font-size: 14px; padding: 50px 0;">
+              <i class="fa-regular fa-face-sad-tear" style="color: grey; font-size: 100px;"></i><br><br>
+              등록된 문의 내용이 없습니다.
+            </td>
+          </tr>-->
 
-      <!--<div class="page" th:if="${pageResponseDTO.total > 0}">
-        <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.start-1})}"
-           class="prev" th:if="${pageResponseDTO.prev}">
-          이전
-        </a>
+        </table>
 
-        <th:block th:each="num:${#numbers.sequence(pageResponseDTO.start, pageResponseDTO.end)}">
-          <a th:href="@{/cs/qna/list(cate=free, pg=${num})}" th:classappend="${pageResponseDTO.pg eq num ? 'num on' : 'num'}">[[${num}]]</a>
-        </th:block>
+        <!--<div class="page" th:if="${pageResponseDTO.total > 0}">
+          <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.start-1})}"
+             class="prev" th:if="${pageResponseDTO.prev}">
+            이전
+          </a>
 
-        <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.end+1})}"
-           class="next" th:if="${pageResponseDTO.next}">
-          다음
-        </a>
-      </div>-->
-      <div class="page">
-        <a class="prev">이전</a>
-        <a class="num on">1</a>
-        <a class="num">2</a>
-        <a class="num">3</a>
-        <a class="next">다음</a>
+          <th:block th:each="num:${#numbers.sequence(pageResponseDTO.start, pageResponseDTO.end)}">
+            <a th:href="@{/cs/qna/list(cate=free, pg=${num})}" th:classappend="${pageResponseDTO.pg eq num ? 'num on' : 'num'}">[[${num}]]</a>
+          </th:block>
 
+          <a th:href="@{/cs/qna/list(cate=free, pg=${pageResponseDTO.end+1})}"
+             class="next" th:if="${pageResponseDTO.next}">
+            다음
+          </a>
+        </div>-->
+        <div class="paging">
+        <a href="#" class="btnCD">선택삭제</a> <!--좌측 정렬-->
+
+        <span class="prev">
+          <a href="#">이전</a>
+        </span>
+        <span class="num">
+          <a class="num on">1</a>
+          <a class="num">2</a>
+          <a class="num">3</a>
+        </span>
+        <span class="next">
+          <a href="#">다음</a>
+        </span>
+
+        <a href="#" class="btnWrite">작성하기</a> <!--우측 정렬-->
       </div>
+      </article>
 
 
-      <a href="#" class="btnWrite">문의하기</a>
     </section>
   </section>
 </html>
