producat cart 수정중

--- a/src/main/resources/templates/fragments/product/product_layout.html
+++ b/src/main/resources/templates/fragments/product/product_layout.html
@@ -27,6 +27,7 @@
         <div class="top" th:replace="~{/fragments/loginBar}">
 
         </div>
+        <input type="hidden" id="path" th:value="${path}">
         <div class="logo">
             <div>
                 <a th:href="@{/}"><img th:src="@{/images/header_logo.png}" alt="로고" /></a>
