--- a/src/main/resources/templates/product/cart.html
+++ b/src/main/resources/templates/product/cart.html
@@ -59,7 +59,7 @@
 
                     </tbody>
                 </table>
-                <input type="button" name="del" value="선택삭제">
+                <input type="button" name="del" id="del" value="선택삭제">
 
                 <!-- 장바구니 전체합계 -->
                 <div class="total">
