admin cs 화면구현 및 모듈화 작업 완료

--- a/src/main/resources/templates/admin/cs/list.html
+++ b/src/main/resources/templates/admin/cs/list.html
@@ -5,7 +5,7 @@
   <section layout:fragment="content" id="notice">
 
     <head>
-      <link><link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
+      <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
     </head>
 
     <nav th:replace="~{/fragments/admin/admin_nav :: nav}">
