--- a/src/main/resources/templates/admin/cs/view.html
+++ b/src/main/resources/templates/admin/cs/view.html
@@ -5,7 +5,7 @@
   <section layout:fragment="content" id="qna">
 
     <head>
-      <link><link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
+      <link rel="stylesheet" th:href="@{/css/adminCs.css}" type="text/css"/>
     </head>
 
     <nav th:replace="~{/fragments/admin/admin_nav :: nav}">
@@ -54,9 +54,9 @@
       </table>
 
       <div id="buttons">
-        <a href="#" class="btnList">목록</a>
-        <a href="#" class="btnModify">수정</a>
         <a href="#" class="btnDelete">삭제</a>
+        <a href="#" class="btnModify">수정</a>
+        <a href="#" class="btnList">목록</a>
       </div>
 
     </article>
