--- a/src/main/resources/static/css/adminCs.css
+++ b/src/main/resources/static/css/adminCs.css
@@ -1,6 +1,44 @@
 /* ----- ----- ----- ----- ----- ----- */
 /* ----- ----- 뷰 페이지 css ----- ----- */
 /* ----- ----- ----- ----- ----- ----- */
+#reply table {
+    margin-top: 48px;
+    width: 100%;
+    border-collapse: collapse;
+    border-top: 2px solid #111;
+}
+
+#reply table * {
+    font-size: 16px;
+    background-color: transparent;
+}
+
+#reply table tr {
+    width: 100%;
+    height: 26px;
+}
+
+#reply table td {
+    padding: 25px;
+    border-bottom: 1px solid #ccc;
+}
+
+#reply table td:first-child {
+    width: 15%;
+    padding-left: 40px;
+    font-weight: bold;
+}
+
+#reply table tr:nth-child(4) textarea {
+    width: 80%;
+    height: 200px;
+}
+
+
+
+/* ----- ----- ----- ----- ----- ----- */
+/* ----- ----- 뷰 페이지 css ----- ----- */
+/* ----- ----- ----- ----- ----- ----- */
 #view table {
     margin-top: 48px;
     width: 100%;
@@ -24,8 +62,8 @@
 }
 
 #view table td:first-child {
-    width: 20%;
-    text-align: center;
+    width: 15%;
+    padding-left: 40px;
     font-weight: bold;
 }
 
@@ -45,9 +83,6 @@
     padding: 26px;
     box-sizing: border-box;
 }*/
-
-
-
 
 
 
@@ -118,6 +153,115 @@
 #list #notice th:nth-child(6) { width: 10%;}
 #list #notice th:nth-child(7) { width: 10%;}
 
+
+
+/* ----- ----- ----- ----- ----- ----- */
+/* ----- ----- write paging 처리 ----- ----- */
+/* ----- ----- ----- ----- ----- ----- */
+#write table {
+    margin-top: 48px;
+    width: 100%;
+    border-collapse: collapse;
+    border-top: 2px solid #111;
+}
+
+#write table * {
+    font-size: 16px;
+    background-color: transparent;
+}
+
+#write table tr {
+    width: 100%;
+    height: 26px;
+}
+
+#write table td {
+    padding: 25px;
+    border-bottom: 1px solid #ccc;
+}
+
+#write table td:first-child {
+    width: 15%;
+    padding-left: 40px;
+    font-weight: bold;
+}
+
+#write table tr:nth-child(2) input {
+    width: 80%;
+}
+
+#write table tr:nth-child(3) textarea {
+    width: 80%;
+    height: 400px;
+}
+
+#write #buttons {
+    text-align: center;
+}
+
+#write #buttons * {
+    float: none;
+}
+
+#write #buttons a {
+    display: inline-block;
+}
+
+
+/* ----- ----- ----- ----- ----- ----- */
+/* ----- ----- write paging 처리 ----- ----- */
+/* ----- ----- ----- ----- ----- ----- */
+#modify table {
+    margin-top: 48px;
+    width: 100%;
+    border-collapse: collapse;
+    border-top: 2px solid #111;
+}
+
+#modify table * {
+    font-size: 16px;
+    background-color: transparent;
+}
+
+#modify table tr {
+    width: 100%;
+    height: 26px;
+}
+
+#modify table td {
+    padding: 25px;
+    border-bottom: 1px solid #ccc;
+}
+
+#modify table td:first-child {
+    width: 15%;
+    padding-left: 40px;
+    font-weight: bold;
+}
+
+#modify table tr:nth-child(2) input {
+    width: 80%;
+}
+
+#modify table tr:nth-child(3) textarea {
+    width: 80%;
+    height: 400px;
+}
+
+#modify #buttons {
+    text-align: center;
+}
+
+#modify #buttons * {
+    float: none;
+}
+
+#modify #buttons a {
+    display: inline-block;
+}
+
+
+
 /* ----- ----- ----- ----- ----- ----- */
 /* ----- ----- list paging 처리 ----- ----- */
 /* ----- ----- ----- ----- ----- ----- */
@@ -157,12 +301,15 @@
     color: #fe434c;
     font-weight: bold;
 }
+#list .btnWrite {float:right;}
+
 
 /* ----- ----- ----- ----- ----- ----- */
 /* ----- ----- 공통버튼 ----- ----- */
 /* ----- ----- ----- ----- ----- ----- */
 #buttons {
     margin-top: 30px;
+    text-align: center;
 }
 #buttons * {
     margin: 0 2px;
@@ -181,25 +328,35 @@
     vertical-align: middle;
     box-sizing: border-box;
 }
+.btnCD:hover {
+    background-color: #959595;
+    color: #fefefe;
+    font-weight: bold;
+}
 
  /*글쓰기, 등록*/
 .btnWrite {
+    display: inline-block;
     text-align: center;
-    float: right;
     width: 100px;
     padding: 6px;
     border: 1px solid #959595;
     font-size: 13px;
-    background-color: #fefefe;
-    color: #333;
+    background-color: #5cb85c;
+    color: #fff;
     vertical-align: middle;
     box-sizing: border-box;
+}
+.btnWrite:hover {
+    background-color: #fff;
+    color: #5cb85c;
+    font-weight: bold;
 }
 
 /*글 수정*/
 .btnModify {
+    display: inline-block;
     text-align: center;
-    float: right;
     width: 100px;
     padding: 6px;
     border: 1px solid #959595;
@@ -212,12 +369,13 @@
 .btnModify:hover {
     border: 1px solid #428bca;
     color: #428bca;
+    font-weight: bold;
 }
 
 /*글 삭제*/
 .btnDelete {
+    display: inline-block;
     text-align: center;
-    float: right;
     width: 100px;
     padding: 6px;
     border: 1px solid #959595;
@@ -230,21 +388,43 @@
 .btnDelete:hover {
     border: 1px solid #d9534f;
     color: #d9534f;
+    font-weight: bold;
 }
 
 /*글 목록*/
 .btnList {
-   text-align: center;
-   float: right;
-   width: 100px;
-   padding: 6px;
-   border: 1px solid #959595;
-   font-size: 13px;
-   background-color: #fefefe;
-   color: #333;
-   vertical-align: middle;
-   box-sizing: border-box;
+    display: inline-block;
+    text-align: center;
+    width: 100px;
+    padding: 6px;
+    border: 1px solid #959595;
+    font-size: 13px;
+    background-color: #428bca;
+    color: #fff;
+    vertical-align: middle;
+    box-sizing: border-box;
 }
 .btnList:hover {
-    background-color: #c4c4c4;
+    background-color: #fff;
+    color: #428bca;
+    font-weight: bold;
+}
+
+.btnCancel {
+    display: inline-block;
+    text-align: center;
+    float: right;
+    width: 100px;
+    padding: 6px;
+    border: 1px solid #959595;
+    font-size: 13px;
+    background-color: #fefefe;
+    color: #333;
+    vertical-align: middle;
+    box-sizing: border-box;
+}
+.btnCancel:hover {
+    background-color: #959595;
+    color: #fefefe;
+    font-weight: bold;
 }
