--- a/src/main/resources/templates/admin/config/info.html
+++ b/src/main/resources/templates/admin/config/info.html
@@ -1,89 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8">
-    <title>롯데ON::관리자 페이지</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>    
-    <script th:src="@{/js/admin/gnb.js}"></script>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" th:href="@{/css/admin.css}">
-</head>
-<body>
-    <div id="admin-wrapper">
-        <header>
-            <div>
-                <a th:href="@{/admin/index}" class="logo"><img th:src="@{/images/admin_logo.png}" alt="admin_logo"/></a>
-                <p>
-                    <span>홍길동님 반갑습니다.</span>
-                    <a th:href="@{/}">HOME |</a>
-                    <a th:href="@{/member/logout}">로그아웃 |</a>
-                    <a th:href="@{/cs}">고객센터</a>
-                </p>
-            </div>
-        </header>
-        <main>
-            <aside>
-                <!-- Global Navigation Bar -->
-                <ul id="gnb">
-                    <li>
-                        <a th:href="@{/admin/config/info}"><i class="fa fa-cogs" aria-hidden="true"></i>환경설정</a>
-                        <ol>
-                            <li><a th:href="@{/admin/config/info}">기본환경설정</a></li>
-                            <li><a th:href="@{/admin/config/banner}">배너관리</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a th:href="@{/admin/index}"><i class="fas fa-store" aria-hidden="true"></i>상점관리</a>
-                        <ol>
-                            <li><a th:href="@{/admin/index}">판매자현황</a></li>
-                            <li><a th:href="@{/admin/product/list}">재고관리</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a th:href="@{/admin/index}"><i class="fa fa-users" aria-hidden="true"></i>회원관리</a>
-                        <ol>
-                            <li><a th:href="@{/admin/index}">회원현황</a></li>
-                            <li><a th:href="@{/admin/index}">포인트관리</a></li>
-                            <li><a th:href="@{/admin/index}">비회원관리</a></li>
-                            <li><a th:href="@{/admin/index}">접속자집계</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a th:href="@{/admin/product/list}"><i class="fas fa-box-open" aria-hidden="true"></i>상품관리</a>
-                        <ol>
-                            <li><a th:href="@{/admin/product/list}">상품현황</a></li>
-                            <li><a th:href="@{/admin/product/register}">상품등록</a></li>
-                            <li><a th:href="@{/admin/product/list}">재고관리</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a th:href="@{/admin/index}"><i class="fa fa-credit-card" aria-hidden="true"></i>주문관리</a>
-                        <ol>
-                            <li><a th:href="@{/admin/index}">주문현황</a></li>
-                            <li><a th:href="@{/admin/index}">매출현황</a></li>
-                            <li><a th:href="@{/admin/index}">결제관리</a></li>
-                            <li><a th:href="@{/admin/index}">배송관리</a></li>
-                        </ol>
-                    </li>
-                    <li>
-                        <a th:href="@{/admin/index}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>게시판관리</a>
-                        <ol>
-                            <li><a th:href="@{/admin/index}">게시판현황</a></li>
-                            <li><a th:href="@{/admin/index}">고객문의</a></li>
-                        </ol>
-                    </li>
-                </ul>
-            </aside>
-            <section id="admin-config-info">
-                <nav>
-                    <h3>기본환경정보</h3>
-                    <p>
-                        HOME > 환경설정 > <strong>기본환경정보</strong>
-                    </p>
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/fragments/admin/admin_layout.html}">
+            <section id="admin-config-info" layout:fragment="content">
+                <nav th:replace="~{/fragments/admin/admin_nav :: nav}">
+                    <!-- nav 들어올 영역 -->
                 </nav>
                 <!-- 상품등록 컨텐츠 시작 -->
                 <article>
@@ -149,12 +70,4 @@
                 </p>
                 <!-- 상품등록 컨텐츠 끝 -->
             </section>
-        </main>
-        <footer>
-            <div>
-                <p>Copyright ©lotteon.com All rights reserved. ADMINISTRATOR Version 5.4.1.2</p>
-            </div>
-        </footer>
-    </div>    
-</body>
 </html>
