--- a/src/main/resources/templates/fragments/admin/admin_aside.html
+++ b/src/main/resources/templates/fragments/admin/admin_aside.html
@@ -7,48 +7,49 @@
                 <li>
                     <a th:href="@{/admin/config/info}"><i class="fa fa-cogs" aria-hidden="true"></i>환경설정</a>
                     <ol>
-                        <li><a th:href="@{/admin/config/info}">기본환경정보</a></li>
-                        <li><a th:href="@{/admin/config/info}">배너관리</a></li>
+                        <li><a th:href="@{/admin/config/info}">x기본환경정보</a></li>
+                        <li><a th:href="@{/admin/config/info}">x배너관리</a></li>
                     </ol>
                 </li>
                 <li>
                     <a th:href="@{/admin/config/info}"><i class="fas fa-store" aria-hidden="true"></i>상점관리</a>
                     <ol>
-                        <li><a th:href="@{/admin/index}">판매자현황</a></li>
-                        <li><a th:href="@{/admin/product/list}">재고관리</a></li>
+                        <li><a th:href="@{/admin/index}">x판매자현황</a></li>
+                        <li><a th:href="@{/admin/product/list}">x재고관리</a></li>
                     </ol>
                 </li>
                 <li>
                     <a th:href="@{/admin/config/info}"><i class="fa fa-users" aria-hidden="true"></i>회원관리</a>
                     <ol>
-                        <li><a th:href="@{/admin/index}">회원현황</a></li>
-                        <li><a th:href="@{/admin/index}">포인트관리</a></li>
-                        <li><a th:href="@{/admin/member}">비회원관리</a></li>
-                        <li><a th:href="@{/admin/index}">접속자집계</a></li>
+                        <li><a th:href="@{/admin/index}">x회원현황</a></li>
+                        <li><a th:href="@{/admin/index}">x포인트관리</a></li>
+                        <li><a th:href="@{/admin/member}">x비회원관리</a></li>
+                        <li><a th:href="@{/admin/index}">x접속자집계</a></li>
                     </ol>
                 </li>
                 <li>
                     <a th:href="@{/admin/product/list}"><i class="fas fa-box-open" aria-hidden="true"></i>상품관리</a>
                     <ol>
-                        <li><a th:href="@{/admin/product/list}">상품현황</a></li>
+                        <li><a th:href="@{/admin/product/list}">ing상품현황</a></li>
                         <li><a th:href="@{/admin/product/register}">상품등록</a></li>
-                        <li><a th:href="@{/admin/product/list}">재고관리</a></li>
+                        <li><a th:href="@{/admin/product/list}">x재고관리</a></li>
                     </ol>
                 </li>
                 <li>
                     <a th:href="@{/admin/index}"><i class="fa fa-credit-card" aria-hidden="true"></i>주문관리</a>
                     <ol>
-                        <li><a th:href="@{/admin/index}">주문현황</a></li>
-                        <li><a th:href="@{/admin/index}">매출현황</a></li>
-                        <li><a th:href="@{/admin/index}">결제관리</a></li>
-                        <li><a th:href="@{/admin/index}">배송관리</a></li>
+                        <li><a th:href="@{/admin/index}">x주문현황</a></li>
+                        <li><a th:href="@{/admin/index}">x매출현황</a></li>
+                        <li><a th:href="@{/admin/index}">x결제관리</a></li>
+                        <li><a th:href="@{/admin/index}">x배송관리</a></li>
                     </ol>
                 </li>
                 <li>
                     <a th:href="@{/admin/config/info}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>게시판관리</a>
                     <ol>
-                        <li><a th:href="@{/admin/index}">게시판현황</a></li>
-                        <li><a th:href="@{/admin/index}">고객문의</a></li>
+                        <li><a th:href="@{/admin/cs/notice/list}">공지사항</a></li>
+                        <li><a th:href="@{/admin/cs/faq/list}">자주묻는질문</a></li>
+                        <li><a th:href="@{/admin/cs/qna/list}">문의하기</a></li>
                     </ol>
                 </li>
             </ul>
