--- a/src/main/resources/templates/fragments/loginBar.html
+++ b/src/main/resources/templates/fragments/loginBar.html
@@ -7,6 +7,7 @@
             <span sec:authorize="isAuthenticated()">
               <span class="client">[[${#authentication.principal.member.name}]]</span>님 환영합니다.
             </span>
+        <a th:href="@{/}">Home</a>
         <th:block sec:authorize="isAnonymous()">
             <a th:href="@{/member/login}">로그인</a>
             <a th:href="@{/member/join}">회원가입</a>
