--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
       </article>
     </div>    <div id="wrapper">
       <header>
-        <div class="top">
+        <div class="top" th:replace="~{/fragments/loginBar}">
           <div>
             <span sec:authorize="isAuthenticated()">
               <span class="client">[[${#authentication.principal.member.uid}]]</span>님 환영합니다.
