product cart complete

--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -772,6 +772,11 @@
 #product > .cart > form > table td {
   text-align: center;
 }
+.throughPrice{
+    text-decoration: line-through; /* 텍스트에 줄 긋기 스타일 적용 */
+    display: block; /* 줄을 긋는 텍스트를 블록 요소로 설정하여 줄을 아래로 내림 */
+    color: gray;
+}
 #product > .cart > form > table .free-delivery {
     background-image: url('../images/product/ico_free_delivery.gif');
     background-repeat: no-repeat;
