--- a/src/main/resources/templates/product/cart.html
+++ b/src/main/resources/templates/product/cart.html
@@ -38,20 +38,26 @@
                         <td colspan="7">장바구니에 상품이 없습니다.</td>
                     </tr>
                     <tr th:each="cart:${cartList}" th:if="${cart.prodNo.sale > 0}">
-                        <td><input type="checkbox" name="cartNo" th:value="${cart.prodNo.prodNo}"></td>
+                        <td><input type="checkbox" name="cartNo" th:value="${cart.cartNo}"></td>
                         <td>
                             <article>
-                                <a href="#"><img src="https://via.placeholder.com/80x80" alt=""></a>
+                                <a th:href="@{/product/view(prodCate1=${cart.prodNo.prodCate1.cate1},prodCate2=${cart.prodNo.prodCate2},prodNo=${cart.prodNo.prodNo})}"><img src="https://via.placeholder.com/80x80" alt=""></a>
                                 <div>
-                                    <h2><a href="#" th:text="${cart.prodNo.prodName}">상품명</a></h2>
+                                    <h2><a th:href="@{/product/view(prodCate1=${cart.prodNo.prodCate1.cate1},prodCate2=${cart.prodNo.prodCate2},prodNo=${cart.prodNo.prodNo})}" th:text="${cart.prodNo.prodName}">상품명</a></h2>
                                     <p th:text="${cart.prodNo.descript}">상품설명</p>
                                 </div>
                             </article>
                         </td>
                         <td th:text="${#numbers.formatInteger(cart.count, 0, 'COMMA')}">1</td>
+
                         <td th:text="${#numbers.formatInteger(cart.price, 0, 'COMMA')}">27,000</td>
+                        <!--<td th:if="${cart.discount ne 0}">
+                            [[${#numbers.formatInteger(cart.discountingPrice, 0, 'COMMA')}]] </br>
+                            <span th:if="${cart.discount ne 0}" th:text="${#numbers.formatInteger(cart.price, 0, 'COMMA')}" class="throughPrice"></span>
+                        </td>-->
+
                         <td th:text="${cart.discount}+'%'">5%</td>
-                        <td th:text="${#numbers.formatInteger(cart.savePoint, 0, 'COMMA')}">270</td>
+                        <td th:text="${#numbers.formatInteger(cart.savePoint, 0, 'COMMA')+'p'}">270</td>
                         <td th:if="${cart.delivery < 1}" class="free-delivery">[[${cart.delivery}]]</td>
                         <td th:if="${cart.delivery > 0}" th:text="${#numbers.formatInteger(cart.delivery, 0, 'COMMA')}"></td>
                         <td th:text="${#numbers.formatInteger(cart.total, 0, 'COMMA')}">27,000</td>
@@ -90,7 +96,7 @@
                             <td id="totalOrderAmount">0원</td>
                         </tr>
                     </table>
-                    <input type="submit" name="" value="주문하기">
+                    <input type="submit" name="order" value="주문하기">
                 </div>
 
             </form>
