--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,21 +67,7 @@
     </div>    <div id="wrapper">
       <header>
         <div class="top" th:replace="~{/fragments/loginBar}">
-          <div>
-            <span sec:authorize="isAuthenticated()">
-              <span class="client">[[${#authentication.principal.member.uid}]]</span>님 환영합니다.
-            </span>
-            <th:block sec:authorize="isAnonymous()">
-              <a th:href="@{/member/login}">로그인</a>
-              <a th:href="@{/member/join}">회원가입</a>
-            </th:block>
-            <th:block sec:authorize="isAuthenticated()">
-              <a sec:authorize="hasAnyRole('ROLE_ADMIN')" th:href="@{/admin}">관리자</a>
-              <a th:href="@{/member/logout}">로그아웃</a>
-              <a href="#">마이페이지</a>
-              <a th:href="@{/product/cart}"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-            </th:block>
-          </div>
+          <!-- 로그인바 -->
         </div>
         <div class="logo">
           <div>
